# playmath

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  pull_request_template.md
.github/classroom/: autograding.json
.github/workflows/: ci.yml  classroom.yml  pre-commit-update.yml  tests.yml
src/playmath/: __init__.py  basic.py
tests/: test_add.py  test_basic_extra.py
