
[project]
name = "playmath"
version = "0.1.0"
description = "Template de exercícios de Git/GitHub com operações matemáticas em Python."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Diego Volpatto", email = "volpatto@lncc.br"}]
license = "MIT"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering"
]

dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "numpy>=1.24.0",
]

[tool.setuptools]
# map the “root” of all your packages to src/
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
# look under src/ for any packages matching "playmath*"
where  = ["src"]
include = ["playmath*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ". -q -v -m 'not grading'"
testpaths = ["tests"]
markers = [
  "grading: tests used for grading student assignments",
]
